# papyr

./: README.md
.github/workflows/: rust-ci.yaml  rust-release.yaml
papyr/: README.md  pubspec.yaml
papyr/.github/: cspell.json
papyr/lib/: papyr.dart  paypr.dart
papyr/lib/src/: ffi_bindings.dart  papyr.dart  paypr.dart
papyr/lib/src/extensions/: scanner_extensions.dart
papyr/lib/src/models/: models.dart  scan_config.dart  scan_config.freezed.dart  scan_event.dart  scan_event.freezed.dart  scanner.dart  scanner.freezed.dart
papyr/test/: papyr_test.dart
papyr/test/src/: paypr_test.dart
papyr_core/: .gitignore  Cargo.toml  README.md  build.sh
papyr_core/include/: papyr_core.h
papyr_core/src/: ffi.rs  lib.rs  models.rs  registry.rs
papyr_core/src/backends/: escl.rs  ica.rs  mod.rs  sane.rs  twain.rs  wia.rs
papyr_core/test_c/: test_ffi  test_ffi.c
papyr_core/tests/: ffi_test.rs
paypr/: pubspec.yaml
paypr/.github/: cspell.json
paypr/lib/: paypr.dart
paypr/lib/src/: paypr.dart
paypr/test/src/: paypr_test.dart
