[package]
name = "papyr_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wia = []      # Windows Image Acquisition
ica = []      # Image Capture Architecture (macOS)
sane = []     # Scanner Access Now Easy (Linux)

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
mdns-sd = "0.15.1"
libloading = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Devices_ImageAcquisition",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Ole",
    "Win32_Foundation"
] }

[target.'cfg(target_os = "macos")'.dependencies]
image-capture-core = "0.1.5"
cocoa = "0.26.1"
objc = "0.2"
core-foundation = "0.9"
objc2-image-capture-core = "0.3.2"
objc2-foundation = "0.3.2"
objc2-av-foundation = "0.3.2"
